# remoteObjectSimpleExample

client/: CMakeLists.txt  MyRemoteObjectSource.h  NestedWorker.cpp  NestedWorker.h  TestClass.cpp  TestClass.h  Worker.cpp  Worker.h  main.cpp
server/: CMakeLists.txt  MyInterface.rep  main.cpp
